--- a/teste001.html
+++ b/teste001.html
@@ -15,5 +15,11 @@
 <body>
     <h1>Hello, World!</h1>
     <p>livrei-me da maldição !!!</p>
+
+    <script>
+        window.alert("Olá, Tudo Bem ??")
+        window.prompt("Qual seu nome? ")
+        window.confirm("Quer jogar ??")
+    </script>
 </body>
 </html>
