--- a/teste001.html
+++ b/teste001.html
@@ -13,12 +13,15 @@
     </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>livrei-me da maldição !!!</p>
+    <h1>X</h1>
+    <p>Bem vindo ao meu Game</p>
+    <script>
+        nome
+    </script>
 
     <script>
         window.alert("Olá, Tudo Bem ??")
-        window.prompt("Qual seu nome? ")
+        var nome = window.prompt("Qual seu nome? ")
         window.confirm("Quer jogar ??")
     </script>
 </body>
