--- a/teste001.html
+++ b/teste001.html
@@ -15,14 +15,12 @@
 <body>
     <h1>X</h1>
     <p>Bem vindo ao meu Game</p>
-    <script>
-        nome
-    </script>
 
     <script>
-        window.alert("Olá, Tudo Bem ??")
+        
         var nome = window.prompt("Qual seu nome? ")
-        window.confirm("Quer jogar ??")
+        window.confirm("Quer jogar " + nome + " ??")
+
     </script>
 </body>
 </html>
