--- a/teste001.html
+++ b/teste001.html
@@ -20,6 +20,11 @@
         
         var nome = window.prompt("Qual seu nome? ")
         window.confirm("Quer jogar " + nome + " ??")
+        var n1 = parseInt(window.prompt("Informe um número: "))
+        var n2 = parseInt(window.prompt("Informe outro número: "))
+        var s = n1 + n2
+
+        document.write(nome + ", a soma dos números escolhdo eh igual a "+ s)
 
     </script>
 </body>
