--- a/soma.html
+++ b/soma.html
@@ -22,7 +22,7 @@
         function somar(){
             var n1 = window.document.getElementById('n1')
             var n2 = window.document.querySelector('input#n2')
-            var res = window.document.querySelector('div#res')
+            //var res = window.document.querySelector('div#res')
             var num1 = Number(n1.value)
             var num2 = Number(n2.value)
             var s = num1 + num2
