--- a/testes.html
+++ b/testes.html
@@ -3,22 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soma</title>
+    <title>funcparametro</title>
+    <style>
+        input{
+            background-color: whitesmoke;
+            color: darkred;
+            width: 50px;
+            height: 20px;
+        }
+        input#inp1{
+            width: 20px;
+            height: 20px;
+        }
+        div#res{
+            background-color: rgb(90, 219, 219);
+            width: 30px;
+            margin-top:50px;
+        }
+    </style>
 
 </head>
 <body>
-    <h1>Soma</h1>    
-    <input type="number" name="n1" id="n1">
+    <h1>Somar</h1>
+    <input type="number" name="n1" id="n1"> +
     <input type="number" name="n2" id="n2">
-    <input type="button" value="soma" onclick="clicar()">
-    <div id="res">resultado</div>
+    <button type="button" onclick="clicar()">soma</button>
+    <div id="res">=</div>
+
     <script>
-        function clicar(){
-            var n1 = Number(window.document.getElementById('n1').value)
-            var n2 = Number(window.document.getElementById('n2').value)
-            var r = n1 + n2
-            res.innerHTML = ("A resposta eh " + r)
-        }
+        function clicar()
+        {var n1 = Number(window.document.getElementById('n1').value)
+        var n2 = Number(window.document.getElementById('n2').value)
+        var r = n1 + n2
+        res.innerHTML = (r)}
     </script>
 </body>
 </html>
